amaroK ChangeLog
================
(c) 2002-2004 the amaroK authors.


  ADD: Full streaming audio support for GStreamer engine.
  FIX: Don't allow user to get into a situation where there is no Menu.
  ADD: Using Welcome-page power-links you can switch between XMMS and amaroK mode.
  CHG: New icons and splash screen, by Roman Becker <roman@formmorf.de>.
  ADD: Allow the current GL analyzer to be detached/attached from the
       main window with the 'd' key.
  FIX: Filtering the collection now searches the second category, too (BR 81681).
  FIX: Filter in playlist was only working for the first argument.
  ADD: Option for auto centering the OSD horizontally.
  CHG: Collection-Monitor now processes removed dirs in a thread.
  ADD: Added a switch to toggle OSD's text-shadow. (BR 82011).
  ADD: More detailed track information dialog for Collection Browser.
  FIX: Track length was always 0 for certain filetypes (e.g. mod, wav) (BR 82673).
  FIX: Gst engine refusing to add certain filetypes to the playlist, when
       the engine was idle (BR 82713).
  FIX: Rare playlist redraw bug, which resulted in messed up items.

VERSION 1.0-beta4:
  ADD: CollectionDB now caches and rescales images. This binds cover art usage
       in amaroK to the collection, but offers greatly improved speed for cover
       retrieval and uses less memory.
  FIX: Cover not shown in ContextBrowser, when song gets played for the first
       time ever (BR 81241).
  ADD: Cover art fetcher, downloads album cover images from amazon.com.
  ADD: Configure->Playback->Device && default device option for audiosinks.
  ADD: ContextBrowser now also shows your overall-favorites and the newest tracks
       in your collection. Therefor I had to reset the statistics, sorry.
  FIX: Decode %-encoded characters in filenames, like %2f for a slash. (BR 74576).
  CHG: Songs you click in ContextBrowser will now directly start to play and won't
       be added to the playlist, if they already are there.